# ChangeLog for kde-base/kopete
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kopete/ChangeLog,v 1.218 2009/10/12 23:58:47 abcd Exp $

  24 Feb 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  kopete-3.5.10-r6.ebuild, +files/kopete-3.5.10-groupwise.patch:
  Fix compiler error in groupwise plugin

*kopete-3.5.10-r6 (23 Feb 2010)

  23 Feb 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  +files/kdenetwork_kopete-r865247.patch, +kopete-3.5.10-r6.ebuild:
  Revision bump to track upstream branches/3.5

*kopete-3.5.10-r5 (21 Jan 2010)

  21 Jan 2010; Serghei Amelian <serghei@gentoo.org>
  +kopete-3.5.10-r5.ebuild:
  Yahoo protocol back on track. First attempt.

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org>
  -files/kopete-3.5.9-icq-protocol-change.patch, -kopete-3.5.10-r3.ebuild:
  Clean out cruft

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> -kopete-3.5.9.ebuild,
  -kopete-3.5.9-r2.ebuild:
  KDE 3.5.9 removal

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> kopete-4.3.1.ebuild:
  amd64 stable wrt #287697

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> -kopete-4.3.0.ebuild:
  Drop KDE 4.3.0

  08 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org> kopete-4.3.0.ebuild,
  kopete-4.3.1.ebuild, kopete-4.3.2.ebuild:
  Libgadu require threads enabled to work.

*kopete-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> +kopete-4.3.2.ebuild:
  Version bump

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org> kopete-4.3.1.ebuild:
  Remove kopete-facebook useflag and dep, still only available for overlay
  ebuilds

*kopete-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kopete-4.3.1.ebuild:
  Version bump

  04 Aug 2009; Alex Alexander <wired@gentoo.org> metadata.xml:
  added skype use desc

*kopete-4.3.0 (04 Aug 2009)

  04 Aug 2009; Alex Alexander <wired@gentoo.org> +kopete-4.3.0.ebuild:
  Version bump
