@@ -15,7 +15,7 @@ DIST kdenetwork-3.5.10.tar.bz2 9336764 RMD160 f888f53746f1e734d3c15c09eac1c2b9c0
 EBUILD kopete-3.5.10-r2.ebuild 4119 RMD160 b024a6b17a68b96e0209d8ab66172017d4129538 SHA1 9fa9816c772ecb5c4349190afb6d6fb1f32c95e8 SHA256 4bb57afc0292fae18849b58aa5deefca3a0ee8cf661a747bd600e4847f0d9d68
 EBUILD kopete-3.5.10-r4.ebuild 4691 RMD160 b43d9529dcae25405ec82c7b2407f4e4953ca94c SHA1 7977199877ef1c2b3c46d2b6ca9366dab9da8cda SHA256 63e8ac0c8424b3347673e6384905c03bc6b6025788780499bbf704b29fef2739
 EBUILD kopete-3.5.10-r5.ebuild 4779 RMD160 8bd08c540b731b57ca3079a4b4f912362f173f7e SHA1 412ed59aeced92f3bcf3f29fc036b91020ae0472 SHA256 a348b80e84fa747b11a39cdf4245cb6d7cc278274c16393b7c86f9b01079b2c8
-EBUILD kopete-3.5.10-r6.ebuild 4878 RMD160 a533fa3af34606f213c9777f3d2e16d2ea0c303d SHA1 75b764e0f1340f2c8790efdbcb01a340e54081cc SHA256 a53ddb0742ca27801de94e1588b08b111af6ec019e9406b84db6f1825e618e41
+EBUILD kopete-3.5.10-r6.ebuild 4983 RMD160 214ac5d0c956e7ad8dda4fa8951c993891ca43be SHA1 92813a605571aac77a9d6e30f9b552caa2d67bf7 SHA256 9de390c027da5198e00ca666ed527d8f88e7529be658f737702b63e2d3c98c19
 EBUILD kopete-3.5.10.ebuild 4053 RMD160 41c7c906e627c637b33ae38d160ef06475a8a418 SHA1 1f65210a253621c4625839d2d63fb898342bde99 SHA256 7bbc78b00ced6af2ca532fd87a2230f2b03d717de6d198cb548882f5ee86b01b
-MISC ChangeLog 32206 RMD160 04385ee29e75fd82e285553db2cc3ad70e0fbe55 SHA1 15d806c4c5fc0297ce5bd749fc4844e4a9636a42 SHA256 995b23ca92705b6fe4711b9df4f5911646585d063553597889b3f2d6ed6d7ef5
+MISC ChangeLog 32382 RMD160 0f89d636d4f5ebafa5c33eb3d0e377853fcf8d62 SHA1 5623da4e819aaa5b819d1dfbbdb517ab67f73790 SHA256 defa265fa3790f109591f1e257a1323f6954423c520ed4efb9c7fb9b7d27fddb
 MISC metadata.xml 2177 RMD160 7fb05332a5564014005aea91cd62d4efc7587156 SHA1 e0774e6f4f08eaa49c0861c653d8557cf0eda640 SHA256 e62fb464ae82d480d882a14f378965bf18651cbb80c51234088fe8c2e0cd000c
